--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/node": "7.0.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "@vue/compiler-sfc": "^3.2.12",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^4.5.0",
@@ -45,12 +47,16 @@
     "postcss-preset-env": "^6.7.0",
     "source-map-loader": "0.2.3",
     "style-loader": "^3.2.1",
-    "css-loader": "^6.2.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
+    "vue-loader": "^16.5.0",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^4.0.0-beta.0"
+  },
+  "dependencies": {
+    "process": "^0.11.10",
+    "vue": "^3.2.12"
   }
 }
